# greentic-perf

./: .gitignore  Cargo.toml  Makefile  README.md  perf-budgets.yaml
.codex/: PR-initial-creation.md  global_rules.md  repo_overview.md  repo_overview_task.md
.config/: nextest.toml
.github/workflows/: ci.yml  codex-security-fix.yml  codex-semver-fix.yml  perf-nightly.yml  perf-pr.yml  publish.yml  smoke.yml
.greentic/wizard/run-1774894961/: answers.json  delegated-answers.json  plan.json
.greentic/wizard/run-1774895079/: plan.json
.greentic/wizard/run-1774895080/: plan.json
.greentic/wizard/run-1774895081/: plan.json
.greentic/wizard/run-1774895082/: plan.json
.greentic/wizard/run-1774895083/: plan.json
.greentic/wizard/run-1774895084/: plan.json
.greentic/wizard/run-1774895085/: plan.json
.greentic/wizard/run-1774895086/: plan.json
.greentic/wizard/run-1774895087/: plan.json
.greentic/wizard/run-1774895088/: answers.json  plan.json
.greentic/wizard/run-1774895089/: plan.json
.greentic/wizard/run-1774895090/: plan.json
.greentic/wizard/run-1774895091/: plan.json
ci/: local_check.sh  perf_test.sh
docs/: README.md  contribution-contract.md  fixtures.md  runtime-perf.md
fixtures/: README.md
fixtures/heavy/: README.md  workspace.json
fixtures/medium/: README.md  workspace.json
fixtures/smoke/: README.md  workspace.json
perf/: Cargo.toml  README.md
perf-smoke-bundle-bundle/: bundle.lock.json  bundle.yaml
perf/benches/: README.md  cli_bench.rs
perf/examples/: criterion_summary.rs  runtime_webchat_load.rs  scenario_json.rs
perf/src/: lib.rs  result.rs  scenario.rs  temp_workspace.rs  threads.rs
perf/src/runtime/: directline.rs  metrics.rs  mod.rs  readiness.rs  start.rs
perf/tests/: README.md  fixtures_real.rs  perf_budgets.rs  runtime_concurrency.rs  runtime_single_turn.rs  runtime_startup.rs  runtime_two_turn.rs  scenario_runner.rs  smoke_cli.rs  smoke_threads.rs
perf/tests/support/: mod.rs
scripts/: README.md  bootstrap_gtc.sh  check_fixtures.sh  generate_fixtures.sh  generate_runtime_fixtures.sh  run_webchat_perf.sh  setup_webchat_perf.sh
src/: main.rs
(+213 files in other folders)
