[workspace]
members = ["perf"]
resolver = "2"

[workspace.dependencies]
criterion = "0.8"
reqwest = { version = "0.13", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_bw = "2.5"
tempfile = "3.23"

[package]
name = "greentic-perf"
version = "0.4.1"
edition = "2024"
license = "MIT"
rust-version = "1.94"
description = "Bootstrap repository for Greentic end-to-end CLI performance and regression testing."
repository = "https://github.com/greenticai/greentic-perf"
homepage = "https://github.com/greenticai/greentic-perf"
documentation = "https://docs.rs/greentic-perf"
readme = "README.md"
keywords = ["performance", "benchmarking", "cli", "testing"]
categories = ["command-line-utilities", "development-tools::testing"]
include = [
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "src/**",
    "ci/**",
    ".github/workflows/**",
    ".codex/**",
]
