[package]
name = "greentic-perf-harness"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT"
description = "Scenario runner support crate for the greentic-perf repository."
repository = "https://github.com/greenticai/greentic-perf"
readme = "README.md"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.23"

[dev-dependencies]
criterion = "0.5"
serde_yaml_bw = "2.5"

[[bench]]
name = "cli_bench"
harness = false
