[package]
name = "greentic-perf-harness"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
publish = false
license = "MIT"
description = "Scenario runner support crate for the greentic-perf repository."
repository = "https://github.com/greenticai/greentic-perf"
readme = "README.md"

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true

[dev-dependencies]
criterion.workspace = true
serde_yaml_bw.workspace = true

[[bench]]
name = "cli_bench"
harness = false
